added some divs for the buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8"/>
 </head>
 <body>
+  <div>
+    <div class="button rock"></div>
+    <div class="button paper"></div>
+    <div class="button scissors"></div>
+  </div>
   <p>Go to the console and type "game();"</p>
   <script>
 
