--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Page Title</title>
   <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <div>
