--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
   <div>
-    <div class="button rock"></div>
-    <div class="button paper"></div>
-    <div class="button scissors"></div>
+    <div>You know how to do this:</div>
+    <div class="button-container">
+      <button class="button rock">Rock</button>
+      <button class="button paper">Paper</button>
+      <button class="button scissors">Scissors</button>
+    </div>
   </div>
-  <p>Go to the console and type "game();"</p>
+  
   <script>
 
     let computerSelection;
