--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <div>
     <div>You know how to do this:</div>
     <div class="button-container">
-      <button class="button rock">Rock</button>
-      <button class="button paper">Paper</button>
-      <button class="button scissors">Scissors</button>
+      <button class="rock">Rock</button>
+      <button class="paper">Paper</button>
+      <button class="scissors">Scissors</button>
     </div>
   </div>
   
@@ -25,6 +25,14 @@
     let playerScore = 0;
     let gameCount = 0;
 
+    const buttons = document.querySelectorAll('button');
+    buttons.forEach((button) => {
+      button.addEventListener('click', () => {
+        playerSelection = button.className
+        console.log(playerSelection);
+      });
+    });
+    
 
     // Your game is going to play against the computer, so begin with a function called computerPlay that will randomly return either ‘Rock’, ‘Paper’ or ‘Scissors’. We’ll use this function in the game to make the computer’s play.
     function computerPlay() {
