added more instructions for restarting the game manually

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
 
           const restartInstructions = document.createElement('div');
           restartInstructions.classList.add('.restart-instructions');
-          restartInstructions.textContent = 'Click any button to play again.'
+          restartInstructions.textContent = 'Press \u2318 + R to restart.' 
           
           resultContainer.appendChild(restartInstructions);
+
         }
 
       });
