made functions for the clicking part of the game and restart. added "hide" class for buttons.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <div>
     <h2>Rock, Paper, Scissors</h2>
     <div>You know how to do this:</div>
+    <div class="restart hide">Play again?</div>
     <div class="button-container">
       <button class="rock">Rock</button>
       <button class="paper">Paper</button>
       <button class="scissors">Scissors</button>
+      <button class="restart hide">Restart</button>
     </div>
     <div id="result-container">
       <div class="player-selection"></div>
