--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Page Title</title>
+  <title>Rock, Paper, Scissors</title>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
   <div>
     <h2>Rock, Paper, Scissors</h2>
-    <div>You know how to do this:</div>
+    <div class="how-to">You know how to do this:</div>
     <div class="restart hide">Play again?</div>
     <div class="button-container">
       <button class="rock">Rock</button>
@@ -17,11 +17,16 @@
       <button class="restart hide">Restart</button>
     </div>
     <div id="result-container">
-      <div class="player-selection"></div>
-      <div class="computer-selection"></div>
+      <div class="selections">
+        <div class="player-selection"></div>
+        <div class="computer-selection"></div>
+      </div>
       <div class="match-result"></div>
-      <div class="player-score"></div>
-      <div class="computer-score"></div>
+      <div class="end-result hide"></div>
+      <div class="scores">
+        <div class="player-score"></div>
+        <div class="computer-score"></div>
+      </div>
     </div>
   </div>
   
